--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       }
 
       .slider {
-        width: 50%;
+        width: 100%;
         margin: 100px auto;
       }
 
@@ -60,20 +60,9 @@
       .slick-current {
       }
 
-      .conteiner {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
       .text {
         text-align: center;
         font-size: 20px;
-      }
-
-      .deslizar {
-        display: flex;
-        justify-content: space-between;
       }
     </style>
     <title>slider</title>
@@ -147,9 +136,9 @@
     <script type="text/javascript">
       $('.deslizar').slick({
         dots: false,
-        infinite: true,
-        speed: 300,
-        slidesToShow: 6,
+        infinite: false,
+        speed: 250,
+        slidesToShow: 7,
         slidesToScroll: 1,
         responsive: [
           {
@@ -157,7 +146,7 @@
             settings: {
               slidesToShow: 4,
               slidesToScroll: 1,
-              infinite: true,
+              infinite: false,
               dots: false
             }
           },
