--- a/index.html
+++ b/index.html
@@ -21,19 +21,13 @@
         margin: 0;
         padding: 0;
       }
-      /* img {
-        border-radius: 100%;
-
-        width: 12rem;
-        height: 12rem;
-      } */
 
       * {
         box-sizing: border-box;
       }
 
       .slider {
-        width: 100%;
+        width: 75%;
         margin: 100px auto;
       }
 
@@ -52,17 +46,25 @@
 
       .slick-slide {
         transition: all ease-in-out 0.3s;
+        opacity: 0.2;
       }
 
       .slick-active {
+        opacity: 0.5;
       }
 
       .slick-current {
+        opacity: 1;
       }
-
       .text {
         text-align: center;
-        font-size: 20px;
+        font-size: 30px;
+      }
+
+      @media (max-with: 1024px) {
+        .slider {
+          width: 90%;
+        }
       }
     </style>
     <title>slider</title>
@@ -133,12 +135,13 @@
       type="text/javascript"
       charset="utf-8"
     ></script>
+    <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <script type="text/javascript">
       $('.deslizar').slick({
         dots: false,
-        infinite: false,
+        infinite: true,
         speed: 250,
-        slidesToShow: 7,
+        slidesToShow: 5,
         slidesToScroll: 1,
         responsive: [
           {
@@ -146,7 +149,7 @@
             settings: {
               slidesToShow: 4,
               slidesToScroll: 1,
-              infinite: false,
+              infinite: true,
               dots: false
             }
           },
