--- a/index.html
+++ b/index.html
@@ -58,12 +58,15 @@
       }
       .text {
         text-align: center;
-        font-size: 30px;
+        font-size: 25px;
+      }
+      .conteiner {
+        width: auto;
       }
 
-      @media (max-with: 1024px) {
+      @media (min-with: 1024px) {
         .slider {
-          width: 90%;
+          width: 100%;
         }
       }
     </style>
@@ -98,7 +101,7 @@
       <div class="conteiner">
         <img src="./img/jaquetas-moletons.png" alt="" />
         <div class="text">
-          <p>Jaquetas / Moletons</p>
+          <p>Jaquetas / Casacos</p>
         </div>
       </div>
       <div class="conteiner">
