--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
       html,
       body {
@@ -58,7 +64,8 @@
       }
       .text {
         text-align: center;
-        font-size: 25px;
+        font-size: 22px;
+        font-family: 'Work Sans', sans-serif;
       }
       .conteiner {
         width: auto;
@@ -141,16 +148,20 @@
     <!-- <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script> -->
     <script type="text/javascript">
       $('.deslizar').slick({
+        centerMode: true,
+        centerPadding: '60px',
         dots: false,
         infinite: true,
-        speed: 250,
+        speed: 400,
         slidesToShow: 5,
         slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 2500,
         responsive: [
           {
             breakpoint: 1024,
             settings: {
-              slidesToShow: 4,
+              slidesToShow: 3,
               slidesToScroll: 1,
               infinite: true,
               dots: false
