--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
       .slick-prev:before,
       .slick-next:before {
         color: black;
+        font-size: 55px;
+      }
+
+      .slick_prev {
+        width: 50px;
+        height: 50px;
       }
 
       .slick-slide {
