Colocando as imagens em nuvem

--- a/index.html
+++ b/index.html
@@ -88,55 +88,82 @@
   <body>
     <section class="deslizar slider">
       <div class="conteiner">
-        <img src="./img/equipamentos.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/equipamentos.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Equipamentos</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/conjuntos.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/conjuntos.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Conjuntos</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/leggins.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/leggins.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Legging</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/blusas.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/blusas.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Blusas</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/jaquetas-moletons.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/jaquetas-moletons.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Jaquetas / Casacos</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/shorts-bermudas.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/shorts-bermudas.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Shorts / Bermudas</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/top.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/top.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Tops</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/acessorios.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/acessorios.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Acessórios</p>
         </div>
       </div>
       <div class="conteiner">
-        <img src="./img/macacoes.png" alt="" />
+        <img
+          src="https://github.com/dralv/slider-kauane/blob/master/img/macacoes.png?raw=true"
+          alt=""
+        />
         <div class="text">
           <p>Macacões</p>
         </div>
